# epicycles-simulate

./: .gitignore  README.md  example.json  main.py  pyproject.toml
dearpywindow/: error.py  functions.py  menu.py  menu_actions.py  mode.py  object_actions.py  windows.py
epicycle/: __main__.py  calculate.py  config.py  create_points.py  drawer.py  point.py  window.py
sample_configs/: crazy_pattern.json  fast_black.json  my_config.json  points.json  test.json
src/: create_points.py  main.py  settings.py  state.py  type_alias.py
src/dearpywindow/: enums.py  main.py  menu.py  mode.py  protocols.py
src/dearpywindow/actions/: __init__.py  create_child_epicycle.py  create_epicycle.py  dump_json.py  load_json.py  update_epicycle.py
src/dearpywindow/window/: __init__.py  base.py  create_child_epicycle.py  create_epicycle.py  delete_epicycle.py  epicycle_menu.py  interface.py  main.py  update_epicycle.py
src/epicycle/: __init__.py  __main__.py  create_points.py  drawer.py  epicycle_wrapper.py  main.py  models.py  state.py  types.py  window.py
src/epicycle/commands/: __init__.py  delete_all_wrappers.py  delete_wrapper.py  deselect_wrapper.py  exit_.py  interface.py  select_wrapper.py  show_all_epicycles.py
src/epicycle/config_dumpers/: __init__.py  json_dumper.py
src/epicycle/config_loaders/: __init__.py  interface.py  json_loader.py
src/epicycle/handlers/: delete_wrapper.py  exit_handler.py  interface.py  (+3 more)
src/pygame_view/: __init__.py  interface.py  main.py  settings.py  window.py
src/window/: __init__.py  drawer.py  enums.py  main.py  window.py
(+24 files in other folders)
