[tool.poetry]
name = "epicycle"
version = "0.1.0"
description = ""
authors = ["likeinlife <likeinlife48@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.4.0"
pygame = "^2.3.0"
dearpygui = "^1.9.1"
pydantic = "^2.6.2"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
ruff = "^0.2.2"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["D", "B", "S", "A", "C4", "T10", "F", "Q"]
ignore = [
    "D100",
    "D107",
    "D101",
    "D106",
    "D103",
    "D104",
    "D102",
    "D105",
    "D203",
    "D212",
    "B008",
    "B904",
    "A003",
]
exclude = ["__init__.py"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
